# dcaseconsolidated

./: .gitignore  README.md
baseline1/: README.md
baseline2/: .gitignore  README.md  backuprequirements.txt  run.sh
birdNet/: .gitignore  BACKGROUND_EXTRACTION_GUIDE.md  BIRDNET_TEMPORAL_IMPLEMENTATION.md  README.md  check_extraction_status.sh  copywavfile.txt  requirements.txt  (+12 more)
v2v3v4Mamba/logBase-Frame/: README.md  pyproject.toml
v2v3v4Mamba/logBase-Frame/configs/: default.yaml
v2v3v4Mamba/logBase-Frame/fsbed/: __init__.py  config.py  logging_utils.py  seed.py
v2v3v4Mamba/logBase-Frame/fsbed/adapt/: __init__.py  finetune.py  finetune_baseline.py  negatives.py  pseudo_label.py
v2v3v4Mamba/logBase-Frame/fsbed/audio/: __init__.py  augmentation.py  chunking.py  features.py  io.py
v2v3v4Mamba/logBase-Frame/fsbed/data/: __init__.py  annotations.py  dataset_cached.py  dataset_infer.py  dataset_multiclass.py  dataset_train.py  dcase_paths.py
v2v3v4Mamba/logBase-Frame/fsbed/eval/: __init__.py  metrics.py
v2v3v4Mamba/logBase-Frame/fsbed/models/: __init__.py  baseline_embed.py  heads.py  losses.py  resnet_embed.py
v2v3v4Mamba/logBase-Frame/fsbed/pipelines/: __init__.py  infer_baseline.py  infer_batch.py  infer_one.py  train.py  train_baseline.py
v2v3v4Mamba/logBase-Frame/fsbed/postprocess/: __init__.py  events.py  smooth.py
v2v3v4Mamba/logBase-Frame/scripts/: evaluate.py  extract_features.py  infer.py  infer_baseline.py  train.py  train_baseline.py
v2v3v4Mamba/logBase-Frame/tests/: conftest.py  test_annotations.py  test_features.py  test_postprocess.py
(+69 files in other folders)
